--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 *.pydevproject
 .project
 .metadata
+.metadata/
 bin/
 tmp/
 *.tmp
@@ -214,3 +215,6 @@ pip-log.txt
 
 #Mr Developer
 .mr.developer.cfg
+JSF/.metadata/.plugins/org.eclipse.core.resources/.safetable/org.eclipse.core.resources
+JSF/.metadata/.plugins/org.eclipse.core.resources/.safetable/org.eclipse.core.resources
+JSF/.metadata/.plugins/org.eclipse.wst.jsdt.core/indexes/savedIndexNames.txt
