--- a/.gitignore
+++ b/.gitignore
@@ -219,3 +219,4 @@ JSF/.metadata/.plugins/org.eclipse.core.resources/.safetable/org.eclipse.core.re
 JSF/.metadata/.plugins/org.eclipse.core.resources/.safetable/org.eclipse.core.resources
 JSF/.metadata/.plugins/org.eclipse.wst.jsdt.core/indexes/savedIndexNames.txt
 *.xmi
+Android/Roomies/.idea/encodings.xml
