--- a/.gitignore
+++ b/.gitignore
@@ -220,3 +220,5 @@ JSF/.metadata/.plugins/org.eclipse.core.resources/.safetable/org.eclipse.core.re
 JSF/.metadata/.plugins/org.eclipse.wst.jsdt.core/indexes/savedIndexNames.txt
 *.xmi
 Android/Roomies/.idea/encodings.xml
+JSF/.metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
+Android/Roomies/.idea/misc.xml
