--- a/JSF/Roomies/WebContent/WEB-INF/web.xml
+++ b/JSF/Roomies/WebContent/WEB-INF/web.xml
@@ -27,6 +27,10 @@
     <param-name>javax.servlet.jsp.jstl.fmt.localizationContext</param-name>
     <param-value>resources.application</param-value>
   </context-param>
+  <context-param>
+  	<param-name>primefaces.mobile.THEME</param-name>
+  	<param-value>RoomiesTheme</param-value>
+  </context-param>
   <listener>
     <listener-class>com.sun.faces.config.ConfigureListener</listener-class>
   </listener>
