--- a/.gitignore
+++ b/.gitignore
@@ -223,3 +223,4 @@ Android/Roomies/.idea/encodings.xml
 JSF/.metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
 Android/Roomies/.idea/misc.xml
 JSF/.metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
+Android/Roomies/.idea/misc.xml
